# howl

./: .appveyor.yml  .gitignore  .travis.yml  .travis_before_install.sh  .travis_script.sh  Cargo.toml  LICENSE  README.md  build.rs  ecs.toml  sh.toml
crates/action/: Cargo.toml
crates/action/src/: lib.rs
crates/behaviour/: Cargo.toml
crates/behaviour/src/: behaviour.rs  lib.rs  tests.rs
crates/colour/: Cargo.toml
crates/colour/src/: lib.rs
crates/content_types/: Cargo.toml
crates/content_types/src/: action_description.rs  action_types.rs  behaviour_types.rs  bullet_type.rs  change_speed.rs  damage_type.rs  drawable_knowledge.rs  hit_points.rs  knowledge.rs  level_switch.rs  lib.rs  messages.rs  mod.rs  path_traverse.rs  probabilistic_choice.rs  projectile_collision.rs  realtime_velocity.rs  relative_direction.rs  simple_npc_knowledge.rs  terrain_type.rs  tile_types.rs
crates/control/: Cargo.toml
crates/control/src/: control.rs  control_spec.rs  input.rs  lib.rs
crates/ecs_content/: Cargo.toml  build.rs  ecs.toml
crates/ecs_content/src/: lib.rs
crates/ecs_core/: Cargo.toml  build.rs
crates/ecs_core/src/: lib.rs
crates/engine_defs/: Cargo.toml
crates/engine_defs/src/: lib.rs
crates/grid/: Cargo.toml
crates/grid/src/: bidirectional_list.rs  coord_cell.rs  dynamic_grid.rs  grid.rs  iter.rs  lib.rs  static_grid.rs  static_grid_flood_fill.rs  tests.rs
crates/line/: Cargo.toml
crates/line/src/: lib.rs  line_state.rs  straight_line.rs
crates/math/: Cargo.toml
crates/math/src/: consts.rs  (+5 more)
crates/message/: Cargo.toml
crates/perlin/: Cargo.toml
crates/search/: Cargo.toml
crates/spatial_hash/: Cargo.toml  build.rs  sh.toml
crates/spatial_hash/src/: coord.rs  lib.rs
crates/tile/: Cargo.toml
crates/util/: Cargo.toml
gensh/: mod.rs
image_src/: PxPlus_IBM_BIOS.xcf  hud.xcf
resources/hud/: hud.toml
scripts/: build.sh  build_macos.sh  build_nix.sh  build_sdl.sh  clean.sh  download_sdl_macos.sh  install.sh  launch.sh  macos_launch.sh  rmgenerated.sh  test.sh
src/: clear.rs  debug.rs  main.rs  main.rs.old
src/allocator/: allocator.rs
src/behaviour/: behaviour.rs  behaviour_graph.rs  mod.rs  old_behaviour.rs
src/best/: best_map.rs  best_set.rs  mod.rs
src/bresenham/: bresenham.rs  mod.rs  tests.rs
src/colour/: ansi.rs  mod.rs  rgb24.rs  rgba32.rs
src/coord/: coord.rs  coord_line.rs  line_state.rs  mod.rs  rect.rs  sequence.rs  straight_line.rs  tests.rs
src/debug/: debug.rs  mod.rs
src/direction/: direction.rs  mod.rs
src/ecs/: actions.rs  ecs_context.rs  entity.rs  entity_table.rs  entity_types.rs  message.rs  message_queue.rs  mod.rs  prototypes.rs  system.rs  system_name.rs  system_queue.rs  table.rs  table_table.rs  tests.rs  update.rs  update_monad.rs
src/ecs_core/: generated.rs
src/frontends/: input.rs  mod.rs  tile_resolver.rs
src/game/: action.rs  actor.rs  actor_manager.rs  animation.rs  ansi_renderer.rs  args.rs  behaviour.rs  clouds.rs  collision.rs  commit_context.rs  component.rs  component_wrapper.rs  config.rs  context.rs  control.rs  control_file.rs  control_spec.rs  ctx.rs  entity.rs  entity_context.rs  entity_store.rs  entity_wrapper.rs  frontend_types.rs  game_entity.rs  game_file.rs  input.rs  knowledge_renderer.rs  launch.rs  launcher.rs  level.rs  meta_action.rs  mod.rs  prototypes.rs  range.rs  render_overlay.rs  renderer.rs  renderer_buffers.rs  result.rs  rng.rs  rule.rs  (+14 more)
src/geometry/: direction.rs  mod.rs  vector.rs  vector2.rs  vector3.rs
src/grid/: coord.rs  dynamic_grid.rs  grid.rs  iter.rs  mod.rs  static_grid.rs  static_grid_flood_fill.rs  tests.rs
src/knowledge/: blind.rs  knowledge.rs  mod.rs  shadowcast.rs  square.rs
src/math/: coord.rs  coord_line.rs  dot_product.rs  mod.rs  vector2.rs  vector3.rs
src/object_pool/: mod.rs
src/perlin/: mod.rs  perlin.rs  perlin2.rs  perlin3.rs  tests.rs
src/renderer/: colour.rs  mod.rs  tile.rs
src/reserver/: mod.rs  reserver.rs
src/schedule/: mod.rs  schedule.rs
src/search/: grid_search.rs  mod.rs  path.rs  query.rs  result.rs  search_context.rs  tests.rs  tracker_grid.rs  traverse.rs  weighted_grid.rs  weighted_grid_search_context.rs
src/spatial_hash/: coord.rs  mod.rs  spatial_hash.rs  tests.rs
src/table/: accessor.rs  flat_table_table.rs  hash_map_table.rs  hash_map_table_ref.rs  hash_map_table_table.rs  id_type_map.rs  inverted_table_table.rs  mod.rs  table.rs  table_ref.rs  table_table.rs  to_index.rs  to_type.rs  type_id_map.rs
src/terminal/: bare_window_manager.rs  mod.rs  style.rs  window_buffer.rs  window_manager.rs
src/tests/: ecs.rs  mod.rs
src/tile/: ansi.rs  mod.rs
src/util/: any_set.rs  best_map.rs  bidirectional_list.rs  dimension_constructor.rs  mod.rs  schedule.rs
src/vision/: default.rs  mod.rs  omniscient.rs  recursive_shadowcast.rs  shadowcast.rs  square.rs  vision.rs
tileset_src/: PxPlus_IBM_BIOS.xcf
user/: config.toml  controls.toml
(+217 files in other folders)
