[package]
name = "apocalypse-post"
version = "1.0.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
build = "build.rs"

[features]
default = ["sdl2"]
use_sdl2_mac_framework = ["sdl2/use_mac_framework"]

[dependencies]
action = { path = "crates/action" }
behaviour = { path = "crates/behaviour" }
colour = { path = "crates/colour" }
content_types = { path = "crates/content_types" }
control = { path = "crates/control" }
ecs_content = { path = "crates/ecs_content" }
ecs_core = { path = "crates/ecs_core" }
spatial_hash = { path = "crates/spatial_hash" }
engine_defs = { path = "crates/engine_defs" }
grid = { path = "crates/grid" }
line = { path = "crates/line" }
math = { path = "crates/math" }
message = { path = "crates/message" }
perlin = { path = "crates/perlin" }
search = { path = "crates/search" }
tile = { path = "crates/tile" }
util = { path = "crates/util" }
rand = "0.3"
num = "0.1"
itertools = "0.5"
getopts = "0.2"
toml = "0.3"
serde = "0.9"
serde_derive = "0.9"
bincode = "1.0.0-alpha6"
fnv = "1.0"

[dependencies.sdl2]
version = "0.29"
optional = true
default-features = false
features = ["image", "ttf"]

[build-dependencies]
copy_dir = "0.1"
